--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "alacritty/themes"]
-	path = alacritty/themes
+	path = alacritty/.config/alacritty/themes
 	url = https://github.com/alacritty/alacritty-theme.git
