--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,14 +11,11 @@
 
 set $mod Mod1
 
-# Monitor setup script
-exec_always --no-startup-id ~/.config/i3/scripts/monitor-setup.sh
-# Shortcut to manually trigger monitor setup
-bindsym $mod+Shift+m exec --no-startup-id ~/.config/i3/scripts/monitor-setup.sh
+exec --no-startup-id picom
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Meslo LGM Nerd Font 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
