--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = [
-    "~/.config/alacritty/custom_themes/iterm.toml"
-]
 
 [env]
 TERM = "xterm-256color"
@@ -31,5 +28,10 @@ padding.y = 10
 startup_mode = "Maximized"
 # decorations = "none"
 opacity = 1
+
+[general]
+import = [
+    "~/.config/alacritty/custom_themes/iterm.toml"
+]
 
 
