--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,12 +10,36 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod1
+set $fm eDP
+set $sm HDMI-A-1-0
 
+# picom
 exec --no-startup-id picom
+
+# Monitor setup
+exec --no-startup-id xrandr --output eDP --primary --mode 1920x1080 --rate 144
+exec --no-startup-id xrandr --output HDMI-A-1-0 --mode 2560x1440 --rate 144 --above eDP
+
+# Set consistent cursor size
+exec --no-startup-id xsetroot -cursor_name left_ptr
+exec --no-startup-id xset r rate 350 50
+exec --no-startup-id xrdb -merge ~/.Xresources
+
+# Workspace to monitor assignments
+workspace $ws1 output $fm
+workspace $ws2 output $fm
+workspace $ws3 output $fm
+workspace $ws4 output $fm
+workspace $ws5 output $fm
+workspace $ws6 output $sm
+workspace $ws7 output $sm
+workspace $ws8 output $sm
+workspace $ws9 output $sm
+workspace $ws10 output $sm
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Meslo LGM Nerd Font 9
+font pango:Meslo LGM Nerd Font 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -51,7 +75,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec /home/galeano/.cargo/bin/alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
