changed polybar config and i3 volume key bind

--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -33,7 +33,7 @@ module-margin = 1
 ; separator-foreground = ${colors.disabled}
 
 font-0 = Meslo LGM Nerd Font:size=10;2
-font-1 = FiraCode Nerd Font:size=10;2
+font-1 = FiraCode Nerd Font:size=12;2
 
 modules-left = arch-logo xworkspaces xwindow
 modules-right = battery backlight pulseaudio memory cpu wlan date
@@ -95,6 +95,8 @@ override-redirect = false
 [module/arch-logo]
 type = custom/text
 
+label-font = 2
+
 format = <label>
 label = 󰣇
 format-foreground = ${colors.primary}
@@ -134,6 +136,13 @@ battery = BAT1
 adapter = ADP1
 full-at = 95
 
+format-charging-prefix-font = 2
+format-full-prefix-font = 2
+ramp-capacity-0-font = 2
+ramp-capacity-1-font = 2
+ramp-capacity-2-font = 2
+ramp-capacity-3-font = 2
+
 format-charging = <label-charging>
 format-charging-prefix = "󰂄 "
 format-charging-prefix-foreground = ${colors.primary}
@@ -156,6 +165,9 @@ ramp-capacity-3-foreground = ${colors.primary}
 [module/pulseaudio]
 type = internal/pulseaudio
 
+format-volume-prefix-font = 2
+label-muted-font = 2
+
 format-volume-prefix = "  "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
@@ -171,6 +183,8 @@ backlight = amdgpu_bl2
 
 use-actual-brightness = true
 
+format-prefix-font = 2
+
 format-label = <label>
 format-prefix = "󰖨 "
 format-prefix-foreground = ${colors.primary}
@@ -178,6 +192,8 @@ format-prefix-foreground = ${colors.primary}
 [module/memory]
 type = internal/memory
 interval = 2
+
+format-prefix-font = 2
 format-prefix = "  "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
@@ -185,27 +201,34 @@ label = %percentage_used:2%%
 [module/cpu]
 type = internal/cpu
 interval = 2
+
+format-prefix-font = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#39cfed}%ifname%%{F#707880} disconnected
+; [network-base]
+; type = internal/network
+; interval = 5
+; format-connected = <label-connected>
+; format-disconnected = <label-disconnected>
+; label-disconnected = %{F#39cfed}%ifname%%{F#707880} disconnected
 
 [module/wlan]
 type = internal/network
 interface = wlan0
 internal = 3.0
 
+format-connected-prefix-font = 2
+
+label-disconnected-font = 2
+
 format-connected-prefix = "󰖩  "
 format-connected-prefix-foreground = ${colors.primary}
 format-connected =  %{A1:networkmanager_dmenu:}<label-connected>%{A}
 label-connected = %essid%
-label-disconnected = "󰖪  "
+
+label-disconnected = "󰖪 "
 label-disconnected-foreground = ${colors.alert}
 
 [module/date]
@@ -214,6 +237,8 @@ interval = 1
 
 date = %d-%m-%y
 time = %H:%M:%S
+
+format-prefix-font = 2
 
 format = <label>
 format-prefix = "  "
