--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,1 +1,14 @@
 backend = "glx";
+glx-copy-from-front = false;
+
+active-opacity = 1;
+inactive-opacity = 1;
+frame-opacity = 1
+inactive-opacity-override = false;
+blur-background = true;
+blur-background-exclude = [
+    "window_type = 'dock'",
+];
+
+blur-method = "dual_kawase";
+blur-strength = 8;
