--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,5 +1,7 @@
 backend = "glx";
 glx-copy-from-front = false;
+vsync = true;
+xrender-sync-fence = true;
 
 active-opacity = 1;
 inactive-opacity = 1;
@@ -8,6 +10,9 @@ inactive-opacity-override = false;
 blur-background = true;
 blur-background-exclude = [
     "window_type = 'dock'",
+    "class_g = 'Maim'",
+    "class_g = 'slop'",
+    "cursor"
 ];
 
 blur-method = "dual_kawase";
