--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -38,6 +38,9 @@ exec_always --no-startup-id ~/.config/i3/scripts/set-wallpaper.sh
 # Notification daemon
 exec --no-startup-id "killall dunst; dunst --config ~/.config/dunst/dunstrc"
 
+# Sharing screen sticky window hide
+for_window [floating_from="auto" title=" is sharing your screen.$"] border none, sticky enable, move position 0 px -55 px
+
 # Remove title bars
 for_window [class="^.*"] border pixel 2
 default_border pixel 1
@@ -140,9 +143,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # Add to i3 config:
-bindsym Shift+Print exec --no-startup-id maim | tee ~/Media/Pictures/screenshots/$(date +%s).png | xclip -sel clip -t image/png
-# bindsym $mod+Print exec --no-startup-id maim -i $(xdotool getactivewindow) | tee ~/Media/Pictures/screenshots/$(date +%s).png | xclip -sel clip -t image/png
-bindsym Print exec --no-startup-id maim -s | tee ~/Media/Pictures/screenshots/$(date +%s).png | xclip -sel clip -t image/png
+bindsym Print exec --no-startup-id flameshot gui --path ~/Media/Pictures/screenshots
 
 # toggle tiling / floating
 # bindsym $mod+Shift+space floating toggle
