--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -36,7 +36,7 @@ font-0 = Meslo LGM Nerd Font:size=10;3
 font-1 = FiraCode Nerd Font:size=12;2
 
 modules-left = arch-logo xworkspaces xwindow
-modules-right = battery backlight pulseaudio memory cpu wlan date
+modules-right = battery backlight pulseaudio bluetooth memory cpu wlan date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -80,7 +80,7 @@ font-0 = Meslo LGM Nerd Font:size=10;3
 font-1 = FiraCode Nerd Font:size=12;2
 
 modules-left = arch-logo xworkspaces xwindow
-modules-right = battery pulseaudio memory cpu wlan date
+modules-right = battery pulseaudio bluetooth memory cpu wlan date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -224,7 +224,7 @@ format-connected-prefix-font = 2
 
 label-disconnected-font = 2
 
-format-connected-prefix = "󰖩  "
+format-connected-prefix = "󰖩 "
 format-connected-prefix-foreground = ${colors.primary}
 format-connected =  %{A1:networkmanager_dmenu:}<label-connected>%{A}
 label-connected = %essid%
@@ -236,8 +236,8 @@ label-disconnected-foreground = ${colors.alert}
 type = internal/date
 interval = 1
 
-date = %d-%m-%y
-time = %H:%M:%S
+date = %b %d 
+time = - %H:%M
 
 format-prefix-font = 2
 
@@ -246,6 +246,21 @@ format-prefix = "  "
 format-prefix-foreground = ${colors.primary}
 
 label = %date% %time%
+
+[module/bluetooth]
+type=custom/script
+exec= ~/.config/polybar/scripts/bluetooth.sh
+interval = 2
+click-left = exec blueman-manager
+click-right = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
+format-padding = 1
+format-background = #000000
+format-foreground = #ffffff
+font = 2
+width = 150
+format = <label>
+label = %output%
+label-maxlen = 50
 
 [settings]
 screenchange-reload = true
