--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -20,7 +20,7 @@ exec_always --no-startup-id ~/.config/i3/scripts/monitor-setup.sh
 bindsym $mod+Shift+m exec --no-startup-id ~/.config/i3/scripts/monitor-setup.sh
 
 # Auto suspend
-exec_always --no-startup-id ~/.config/i3/scripts/lock.sh
+# exec_always --no-startup-id ~/.config/i3/scripts/lock.sh
 
 # Set consistent cursor size
 exec --no-startup-id xsetroot -cursor_name left_ptr
@@ -31,6 +31,8 @@ exec --no-startup-id xrdb -merge ~/.Xresources
 exec_always --no-startup-id xinput set-prop "PNP0C50:0e 06CB:7E7E Touchpad" "libinput Tapping Enabled" 1
 exec_always --no-startup-id xinput set-prop "PNP0C50:0e 06CB:7E7E Touchpad" "libinput Natural Scrolling Enabled" 1
 exec_always --no-startup-id xinput set-prop "PNP0C50:0e 06CB:7E7E Touchpad" "libinput Tapping Button Mapping Enabled" 0 1 0
+
+exec_always --no-startup-id xset r rate 300 50
 
 # Set wallpaper
 exec_always --no-startup-id ~/.config/i3/scripts/set-wallpaper.sh
@@ -105,10 +107,10 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec --no-startup-id ~/.config/rofi/launchers/type-1/launcher.sh
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+ntilde focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 # bindsym $mod+Left focus left
@@ -117,10 +119,10 @@ bindsym $mod+ntilde focus right
 # bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+ntilde move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 # bindsym $mod+Shift+Left move left
@@ -129,7 +131,7 @@ bindsym $mod+Shift+ntilde move right
 # bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+# bindsym $mod+h split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -191,10 +193,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym ntilde resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
