--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -9,10 +9,9 @@ frame-opacity = 1
 inactive-opacity-override = false;
 blur-background = true;
 blur-background-exclude = [
-    "window_type = 'dock'",
     "class_g = 'Maim'",
     "class_g = 'slop'",
-    "cursor"
+    "class_g = 'Cursor'"
 ];
 
 blur-method = "dual_kawase";
