--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,6 +1,6 @@
 
 [colors]
-background = #000000
+background = #80000000
 background-alt = #00242b
 foreground = #ffffff
 primary = #39cfed
@@ -41,12 +41,10 @@ modules-right = battery backlight pulseaudio bluetooth memory cpu wlan date
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-bottom = true
+; bottom = true
 
 enable-ipc = true
 
-; wm-restack = generic
-; wm-restack = bspwm
 wm-restack = i3
 
 override-redirect = false
@@ -254,7 +252,6 @@ interval = 2
 click-left = exec blueman-manager
 click-right = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
 format-padding = 1
-format-background = #000000
 format-foreground = #ffffff
 font = 2
 width = 150
@@ -264,6 +261,6 @@ label-maxlen = 50
 
 [settings]
 screenchange-reload = true
-pseudo-transparency = true
+pseudo-transparency = false
 
 ; vim:ft=dosini
