--- a/i3/.config/i3/workspace.conf
+++ b/i3/.config/i3/workspace.conf
@@ -36,7 +36,7 @@ workspace $ws12 output $sm
 workspace $ws13 output $sm
 workspace $ws14 output $sm
 workspace $ws15 output $sm
-workspace $ws16 output $fm
+workspace $ws16 output $sm
 workspace $ws17 output $sm
 workspace $ws18 output $sm
 workspace $ws19 output $sm
