--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,3 +1,4 @@
+workspace_layout default
 
 set $mod Mod1
 set $mmd Mod4
@@ -44,9 +45,10 @@ exec --no-startup-id "killall dunst; dunst --config ~/.config/dunst/dunstrc"
 # for_window [floating_from="auto" title=" is sharing your screen.$"] border none, sticky enable, move position 0 px -55 px
 
 # Remove title bars
-# for_window [class="^.*"] border pixel 2
-default_border pixel 2
-default_floating_border pixel 2
+# for_window [class="^.*"] border pixel 1
+default_border pixel 1
+default_floating_border pixel 1
+gaps inner 10
 
 # Window Colors
 client.focused          #39cfed #39cfed #ffffff #39cfed   #39cfed   # Active window
@@ -134,15 +136,15 @@ bindsym $mod+Shift+l move right
 # bindsym $mod+h split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+# bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+# bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# bindsym $mod+s layout stacking
+# bindsym $mod+w layout tabbed
+# bindsym $mod+e layout toggle split
 
 # Screenshots
 bindsym Print exec --no-startup-id flameshot gui --clipboard --path ~/Media/Pictures/screenshots
@@ -154,7 +156,7 @@ bindsym Print exec --no-startup-id flameshot gui --clipboard --path ~/Media/Pict
 # bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+# bindsym $mod+a focus parent
 
 # polybar
 # exec_always --no-startup-id ~/.config/polybar/launch.sh
@@ -164,19 +166,6 @@ bindsym $mod+Shift+x exec --no-startup-id betterlockscreen -l blur
 
 # focus the child container
 #bindsym $mod+d focus child
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -193,10 +182,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+	bindsym h resize grow width 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym l resize shrink width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
