--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -45,16 +45,14 @@ exec --no-startup-id "killall dunst; dunst --config ~/.config/dunst/dunstrc"
 # for_window [floating_from="auto" title=" is sharing your screen.$"] border none, sticky enable, move position 0 px -55 px
 
 # Remove title bars
-# for_window [class="^.*"] border pixel 1
-default_border pixel 1
-default_floating_border pixel 1
-gaps inner 10
+for_window [class=".*"] border pixel 2
+gaps inner 15
 
-# Window Colors
+# class                 border  backgr. text    indicator child_border
 client.focused          #39cfed #39cfed #ffffff #39cfed   #39cfed   # Active window
-client.focused_inactive #00000000 #00000000 #ffffff #00000000   #00000000   # Inactive window, active workspace
-client.unfocused        #00000000 #00000000 #888888 #00000000   #00000000   # Inactive window, inactive workspace
-client.urgent          #A54242 #A54242 #ffffff #A54242   #A54242   # Urgent window
+client.focused_inactive #a3a3a3 #a3a3a3 #ffffff #a3a3a3   #a3a3a3   # Inactive window, active workspace
+client.unfocused        #a3a3a3 #a3a3a3 #888888 #a3a3a3   #a3a3a3   # Inactive window, inactive workspace
+client.urgent           #A54242 #A54242 #ffffff #A54242   #A54242   # Urgent window
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
