--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,12 +1,22 @@
 
 [colors]
-background = #0D000000
+background = #99000000
 background-alt = #00242b
 foreground = #ffffff
-primary = #39cfed
+primary = #ffffff
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
+0 = #fbf8cc
+1 = #fde4cf
+2 = #ffcfd2
+3 = #f1c0e8
+4 = #cfbaf0
+5 = #a3c4f3
+6 = #90dbf4
+7 = #8eecf5
+8 = #98f5e1
+9 = #b9fbc0
 
 [bar/laptop]
 monitor = eDP
@@ -33,9 +43,9 @@ module-margin = 1
 ; separator-foreground = ${colors.disabled}
 
 font-0 = Meslo LGM Nerd Font:size=10;3
-font-1 = FiraCode Nerd Font:size=12;2
+font-1 = FiraCode Nerd Font:size=10;2
 
-modules-left = arch-logo xworkspaces xwindow
+modules-left = xworkspaces xwindow
 modules-right = battery backlight pulseaudio bluetooth memory cpu wlan date
 
 cursor-click = pointer
@@ -47,7 +57,7 @@ enable-ipc = true
 
 # wm-restack = i3
 
-override-redirect = false
+# override-redirect = true
 
 
 [bar/top_monitor]
@@ -77,7 +87,7 @@ module-margin = 1
 font-0 = Meslo LGM Nerd Font:size=10;3
 font-1 = FiraCode Nerd Font:size=12;2
 
-modules-left = arch-logo xworkspaces xwindow
+modules-left = xworkspaces xwindow
 modules-right = battery pulseaudio bluetooth memory cpu wlan date
 
 cursor-click = pointer
@@ -98,7 +108,7 @@ label-font = 2
 
 format = <label>
 label = 󰣇
-format-foreground = ${colors.primary}
+format-foreground = ${colors.0}
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -107,12 +117,14 @@ pin-workspaces = true
 
 label-active = %name%
 label-active-font = 0
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
+label-active-background = ${colors.0}
+label-active-underline= ${colors.0}
+label-active-foreground = #000000
 label-active-padding = 1
 
 label-occupied = %name%
 label-occupied-padding = 1
+label-occupied-foreground = ${colors.0}
 
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
@@ -127,13 +139,13 @@ type = internal/xwindow
 
 format = <label>
 label = %class%
+format-foreground = ${colors.0}
 label-maxlen = 50
 
 [module/battery]
 type = internal/battery
 battery = BAT1
 adapter = ADP1
-; full-at = 95
 
 format-charging-prefix-font = 2
 format-full-prefix-font = 2
@@ -143,38 +155,22 @@ ramp-capacity-2-font = 2
 ramp-capacity-3-font = 2
 
 format-charging = <label-charging>
+format-charging-foreground = ${colors.1}
 format-charging-prefix = "󰂄 "
-format-charging-prefix-foreground = ${colors.primary}
+format-charging-prefix-foreground = ${colors.1}
 
 format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-foreground = ${colors.1}
 
 format-full = <label-full>
+format-full-foreground = ${colors.1}
 format-full-prefix = "󰁹 "
-format-full-prefix-foreground = ${colors.primary}
+format-full-prefix-foreground = ${colors.1}
 
 ramp-capacity-0 = "󰁺"
 ramp-capacity-1 = "󰁼"
 ramp-capacity-2 = "󰁿"
 ramp-capacity-3 = "󰂂"
-ramp-capacity-0-foreground = ${colors.alert}
-ramp-capacity-1-foreground = ${colors.primary}
-ramp-capacity-2-foreground = ${colors.primary}
-ramp-capacity-3-foreground = ${colors.primary}
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix-font = 2
-label-muted-font = 2
-
-format-volume-prefix = "  "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-
-label-muted = " "
-label-muted-foreground = ${colors.disabled}
 
 [module/backlight]
 type = internal/backlight
@@ -185,8 +181,39 @@ use-actual-brightness = true
 format-prefix-font = 2
 
 format-label = <label>
+label-foreground = ${colors.2}
 format-prefix = "󰖨 "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.2}
+
+[module/pulseaudio]
+type = internal/pulseaudio
+
+format-volume-prefix-font = 2
+label-muted-font = 2
+
+format-volume-prefix = "  "
+format-volume-prefix-foreground = ${colors.3}
+format-volume = <label-volume>
+format-volume-foreground = ${colors.3}
+
+label-volume = %percentage%%
+
+label-muted = " "
+label-muted-foreground = ${colors.3}
+
+[module/bluetooth]
+type=custom/script
+exec= ~/.config/polybar/scripts/bluetooth.sh 
+interval = 2
+click-left = exec blueman-manager
+click-right = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
+format-padding = 1
+format-foreground = ${colors.4}
+font = 2
+width = 150
+format = <label>
+label = %output%
+label-maxlen = 50
 
 [module/memory]
 type = internal/memory
@@ -194,8 +221,9 @@ interval = 2
 
 format-prefix-font = 2
 format-prefix = "  "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.5}
 label = %percentage_used:2%%
+label-foreground = ${colors.5}
 
 [module/cpu]
 type = internal/cpu
@@ -203,8 +231,9 @@ interval = 2
 
 format-prefix-font = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.6}
 label = %percentage:2%%
+label-foreground = ${colors.6}
 
 ; [network-base]
 ; type = internal/network
@@ -223,12 +252,14 @@ format-connected-prefix-font = 2
 label-disconnected-font = 2
 
 format-connected-prefix = "󰖩 "
-format-connected-prefix-foreground = ${colors.primary}
+format-connected-prefix-foreground = ${colors.7}
 format-connected =  %{A1:networkmanager_dmenu:}<label-connected>%{A}
+format-connected-foreground = ${colors.7}
 label-connected = %essid%
+label-connected-foreground = ${colors.7}
 
 label-disconnected = "󰖪 "
-label-disconnected-foreground = ${colors.alert}
+label-disconnected-foreground = ${colors.7}
 
 [module/date]
 type = internal/date
@@ -238,26 +269,13 @@ date = %b %d
 time = - %H:%M
 
 format-prefix-font = 2
+format-prefix = "󰥔 "
 
 format = <label>
-format-prefix = "  "
-format-prefix-foreground = ${colors.primary}
+format-foreground = ${colors.8}
+format-prefix-foreground = ${colors.8}
 
 label = %date% %time%
-
-[module/bluetooth]
-type=custom/script
-exec= ~/.config/polybar/scripts/bluetooth.sh
-interval = 2
-click-left = exec blueman-manager
-click-right = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
-format-padding = 1
-format-foreground = #ffffff
-font = 2
-width = 150
-format = <label>
-label = %output%
-label-maxlen = 50
 
 [settings]
 screenchange-reload = true
