--- a/neofetch/.config/neofetch/config.conf
+++ b/neofetch/.config/neofetch/config.conf
@@ -1,44 +1,19 @@
-# See this wiki page for more info:
-# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info title
-    info underline
-
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    # info "CPU" cpu
-    # info "GPU" gpu
-    # info "Memory" memory
-
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
-
-    # info cols
+        
+    prin "${c1} Sys-Info       "
+    info "${c5} ├─  Distro     " distro
+    info "${c5} ├─  Kernel     " kernel
+    info "${c5} ├─  DE/WM      " wm
+    info "${c5} ├─ 󰍛 CPU        " cpu
+    info "${c5} ├─ 󰍹 GPU        " gpu
+    info "${c5} ├─ 󰅐 Up Time    " uptime
+    info "${c5} ├─  Disk         " disk
+    info "${c5} └─  SHELL      " shell 
+    prin "$(color 1)  $(color 2) $(color 3) $(color 4) $(color 5) $(color 6) $(color 7) $(color 8)"
+    
 }
 
-# Title
-
+##--------- Title
 
 # Hide/Show Fully qualified domain name.
 #
@@ -48,8 +23,7 @@ print_info() {
 title_fqdn="off"
 
 
-# Kernel
-
+##--------- Kernel
 
 # Shorten the output of the kernel function.
 #
@@ -64,8 +38,7 @@ title_fqdn="off"
 kernel_shorthand="on"
 
 
-# Distro
-
+##--------- Distro
 
 # Shorten the output of the distro function
 #
@@ -85,11 +58,10 @@ distro_shorthand="off"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="on"
+os_arch="off"
 
 
-# Uptime
-
+##--------- Uptime
 
 # Shorten the output of the uptime function
 #
@@ -104,8 +76,7 @@ os_arch="on"
 uptime_shorthand="on"
 
 
-# Memory
-
+##--------- Memory
 
 # Show memory pecentage in output.
 #
@@ -128,11 +99,10 @@ memory_percent="off"
 # kib  '1020928KiB / 7117824KiB'
 # mib  '1042MiB / 6951MiB'
 # gib: ' 0.98GiB / 6.79GiB'
-memory_unit="mib"
+memory_unit="gib"
 
 
-# Packages
-
+##--------- Packages
 
 # Show/Hide Package Manager names.
 #
@@ -147,8 +117,7 @@ memory_unit="mib"
 package_managers="on"
 
 
-# Shell
-
+##--------- Shell
 
 # Show the path to $SHELL
 #
@@ -173,8 +142,7 @@ shell_path="off"
 shell_version="on"
 
 
-# CPU
-
+##--------- CPU
 
 # CPU speed type
 #
@@ -195,7 +163,7 @@ speed_type="bios_limit"
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="off"
+speed_shorthand="on"
 
 # Enable/Disable CPU brand in output.
 #
@@ -206,7 +174,7 @@ speed_shorthand="off"
 # Example:
 # on:   'Intel i7-6500U'
 # off:  'i7-6500U (4)'
-cpu_brand="on"
+cpu_brand="off"
 
 # CPU Speed
 # Hide/Show CPU speed.
@@ -232,7 +200,7 @@ cpu_speed="on"
 # logical:  'Intel i7-6500U (4) @ 3.1GHz' (All virtual cores)
 # physical: 'Intel i7-6500U (2) @ 3.1GHz' (All physical cores)
 # off:      'Intel i7-6500U @ 3.1GHz'
-cpu_cores="logical"
+cpu_cores="off"
 
 # CPU Temperature
 # Hide/Show CPU temperature.
@@ -252,8 +220,7 @@ cpu_cores="logical"
 cpu_temp="off"
 
 
-# GPU
-
+##--------- GPU
 
 # Enable/Disable GPU Brand
 #
@@ -283,11 +250,10 @@ gpu_brand="on"
 #
 # integrated:
 #   GPU1: Intel Integrated Graphics
-gpu_type="all"
+gpu_type="dedicated"
 
 
-# Resolution
-
+##--------- Resolution
 
 # Display refresh rate next to each monitor
 # Default: 'off'
@@ -301,8 +267,7 @@ gpu_type="all"
 refresh_rate="off"
 
 
-# Gtk Theme / Icons / Font
-
+##--------- Gtk Theme / Icons / Font
 
 # Shorten output of GTK Theme / Icons / Font
 #
@@ -314,7 +279,6 @@ refresh_rate="off"
 # on:  'Numix, Adwaita'
 # off: 'Numix [GTK2], Adwaita [GTK3]'
 gtk_shorthand="off"
-
 
 # Enable/Disable gtk2 Theme / Icons / Font
 #
@@ -339,8 +303,7 @@ gtk2="on"
 gtk3="on"
 
 
-# IP Address
-
+##--------- IP Address
 
 # Website to ping for the public IP
 #
@@ -356,9 +319,7 @@ public_ip_host="http://ident.me"
 # Flag:    --ip_timeout
 public_ip_timeout=2
 
-
 # Desktop Environment
-
 
 # Show Desktop Environment version
 #
@@ -368,8 +329,7 @@ public_ip_timeout=2
 de_version="on"
 
 
-# Disk
-
+##--------- Disk
 
 # Which disks to display.
 # The values can be any /dev/sdXX, mount point or directory.
@@ -387,7 +347,7 @@ de_version="on"
 # disk_show=('/'):
 #      'Disk (/): 74G / 118G (66%)'
 #
-disk_show=('/')
+disk_show=('/home')
 
 # Disk subtitle.
 # What to append to the Disk subtitle.
@@ -426,8 +386,7 @@ disk_subtitle="mount"
 disk_percent="on"
 
 
-# Song
-
+##--------- Song
 
 # Manually specify a music player.
 #
@@ -511,8 +470,7 @@ song_shorthand="off"
 mpc_args=()
 
 
-# Text Colors
-
+##--------- Text Colors
 
 # Text Colors
 #
@@ -526,11 +484,10 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(1 2 3 4 5 6 7 8)
 
 
-# Text Options
-
+##--------- Text Options
 
 # Toggle bold text
 #
@@ -551,8 +508,7 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="-"
-
+underline_char="󰍴"
 
 # Info Separator
 # Replace the default separator with the specified string.
@@ -566,8 +522,7 @@ underline_char="-"
 separator=":"
 
 
-# Color Blocks
-
+##--------- Color Blocks
 
 # Color block range
 # The range of colors to print.
@@ -620,8 +575,7 @@ block_height=1
 # col_offset=7      - Leave 7 spaces then print the colors
 col_offset="auto"
 
-# Progress Bars
-
+##--------- Progress Bars
 
 # Bar characters
 #
@@ -663,7 +617,6 @@ bar_length=15
 bar_color_elapsed="distro"
 bar_color_total="distro"
 
-
 # Info display
 # Display a bar with the info.
 #
@@ -685,8 +638,7 @@ battery_display="off"
 disk_display="off"
 
 
-# Backend Settings
-
+##--------- Backend Settings
 
 # Image backend.
 #
@@ -711,8 +663,7 @@ image_backend="ascii"
 image_source="auto"
 
 
-# Ascii Options
-
+##--------- Ascii Options
 
 # Ascii distro
 # Which distro's ascii art to display.
@@ -760,7 +711,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+ascii_distro="arch_small"
 
 # Ascii Colors
 #
@@ -771,7 +722,7 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+ascii_colors=(6 6 1 7 7 6q)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
@@ -782,8 +733,7 @@ ascii_colors=(distro)
 ascii_bold="on"
 
 
-# Image Options
-
+##--------- Image Options
 
 # Image loop
 # Setting this to on will make neofetch redraw the image constantly until
@@ -833,7 +783,7 @@ image_size="auto"
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=3
+gap=2
 
 # Image offsets
 # Only works with the w3m backend.
@@ -854,7 +804,7 @@ xoffset=0
 background_color=
 
 
-# Misc Options
+##--------- Misc Options
 
 # Stdout mode
 # Turn off all colors and disables image backend (ASCII/Image).
