soptify player, rofi emoji selector and calculator

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -34,7 +34,7 @@ line-size = 2pt
 ; border-size = 4pt
 ; border-color = #00000000
 
-padding-left = 1
+padding-left = 0
 padding-right = 1
 
 module-margin = 1
@@ -42,11 +42,12 @@ module-margin = 1
 ; separator = |
 ; separator-foreground = ${colors.disabled}
 
-font-0 = Meslo LGM Nerd Font:size=10;3
-font-1 = FiraCode Nerd Font:size=10;2
+font-0 = Meslo LGM Nerd Font:size=10;2
+font-1 = FiraCode Nerd Font:size=10;1
 
 modules-left = xworkspaces xwindow
-modules-right = battery backlight pulseaudio bluetooth memory cpu wlan date
+modules-center = previous spotify next
+modules-right = battery backlight pulseaudio bluetooth memory cpu wlan date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -55,9 +56,9 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-# wm-restack = i3
+; wm-restack = i3
 
-# override-redirect = true
+; override-redirect = true
 
 
 [bar/top_monitor]
@@ -84,11 +85,12 @@ module-margin = 1
 ; separator = |
 ; separator-foreground = ${colors.disabled}
 
-font-0 = Meslo LGM Nerd Font:size=10;3
+font-0 = Meslo LGM Nerd Font:size=10;2
 font-1 = FiraCode Nerd Font:size=12;2
 
 modules-left = xworkspaces xwindow
-modules-right = battery pulseaudio bluetooth memory cpu wlan date
+modules-center = previous spotify next
+modules-right = battery pulseaudio bluetooth memory cpu wlan date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -97,9 +99,9 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-wm-restack = i3
+; wm-restack = i3
 
-override-redirect = false
+; override-redirect = true
 
 [module/arch-logo]
 type = custom/text
@@ -277,8 +279,37 @@ format-prefix-foreground = ${colors.8}
 
 label = %date% %time%
 
+[module/previous]
+type = custom/script 
+exec-if = "pgrep spotify -x" 
+exec = echo " " 
+click-left = "spotifyctl -q previous"
+format-foreground = ${colors.0}
+format-font = 2
+
+[module/next] 
+type = custom/script 
+exec-if = "pgrep spotify -x" 
+exec = echo " " 
+click-left = "spotifyctl -q next"
+format-foreground = ${colors.0}
+format-font = 2
+
+[module/spotify] 
+type = custom/script 
+exec-if = "pgrep spotify -x" 
+exec  = "spotifyctl -q status --format '%artist%: %title%'" 
+click-left = "spotifyctl -q playpause"
+format-foreground = ${colors.0}
+
+[module/powermenu]
+type = custom/text
+content = ""
+content-foreground = ${colors.0}
+content-padding = 1
+click-left = "~/.config/i3/scripts/power-menu.sh"
+
 [settings]
 screenchange-reload = true
 pseudo-transparency = false
 
-; vim:ft=dosini
