--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -281,7 +281,7 @@ label = %date% %time%
 
 [module/previous]
 type = custom/script 
-exec-if = "pgrep spotify -x" 
+exec-if = "pgrep spotify -x > /dev/null" 
 exec = echo " " 
 click-left = "spotifyctl -q previous"
 format-foreground = ${colors.0}
@@ -289,7 +289,7 @@ format-font = 2
 
 [module/next] 
 type = custom/script 
-exec-if = "pgrep spotify -x" 
+exec-if = "pgrep spotify -x > /dev/null" 
 exec = echo " " 
 click-left = "spotifyctl -q next"
 format-foreground = ${colors.0}
@@ -297,8 +297,9 @@ format-font = 2
 
 [module/spotify] 
 type = custom/script 
-exec-if = "pgrep spotify -x" 
+exec-if = "pgrep spotify -x > /dev/null" 
 exec  = "spotifyctl -q status --format '%artist%: %title%'" 
+interval = 1
 click-left = "spotifyctl -q playpause"
 format-foreground = ${colors.0}
 
