--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -5,13 +5,17 @@ xrender-sync-fence = true;
 
 active-opacity = 1;
 inactive-opacity = 1;
-frame-opacity = 1
+frame-opacity = 1;
 inactive-opacity-override = false;
 blur-background = true;
 blur-background-exclude = [
     "class_g = 'Maim'",
     "class_g = 'slop'",
-    "class_g = 'Cursor'"
+    "class_g = 'Cursor'",
+    "window_type = 'menu'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'popup_menu'",
+    "window_type = 'tooltip'",
 ];
 
 
@@ -36,5 +40,10 @@ shadow-exclude = [
     "class_g = 'dmenu'",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "class_g = 'Polybar'",
+    "window_type = 'menu'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'popup_menu'",
+    "window_type = 'tooltip'",
+    "window_type = 'utility'",
 ];
 
