memory usage changed to used GiB

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -224,7 +224,7 @@ interval = 2
 format-prefix-font = 2
 format-prefix = "  "
 format-prefix-foreground = ${colors.5}
-label = %percentage_used:2%%
+label = %used%
 label-foreground = ${colors.5}
 
 [module/cpu]
@@ -235,6 +235,8 @@ format-prefix-font = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.6}
 label = %percentage:2%%
+label-warn = %percentage:2%%
+label-warn-foreground = ${colors.alert}
 label-foreground = ${colors.6}
 
 ; [network-base]
