changed wifi module

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -255,14 +255,19 @@ format-connected-prefix-font = 2
 
 label-disconnected-font = 2
 
-format-connected-prefix = "󰖩 "
-format-connected-prefix-foreground = ${colors.7}
-format-connected =  %{A1:networkmanager_dmenu:}<label-connected>%{A}
+format-connected = <ramp-signal> <label-connected>
 format-connected-foreground = ${colors.7}
-label-connected = %essid%
+label-connected = %signal%% %essid% 
 label-connected-foreground = ${colors.7}
 
-label-disconnected = "󰖪 "
+ramp-signal-0 = 󰤟
+ramp-signal-1 = 󰤢
+ramp-signal-2 = 󰤢
+ramp-signal-3 = 󰤥
+ramp-signal-4 = 󰤥
+ramp-signal-5 = 󰤨
+
+label-disconnected = 󰤭
 label-disconnected-foreground = ${colors.7}
 
 [module/date]
