feat/polybar: added base configuration for monitors

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -18,8 +18,7 @@ disabled = #707880
 8 = #98f5e1
 9 = #b9fbc0
 
-[bar/laptop]
-monitor = eDP
+[bar/base]
 width = 100%
 height = 20pt
 ; radius = 6
@@ -60,48 +59,14 @@ enable-ipc = true
 
 ; override-redirect = true
 
+[bar/laptop]
+inherit = bar/base
+monitor = eDP
 
 [bar/top_monitor]
+inherit = bar/base
 monitor = HDMI-A-1-0
-width = 100%
-height = 20pt
-; radius = 6
 
-dpi = 96
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 2pt
-
-; border-size = 4pt
-; border-color = #00000000
-
-padding-left = 2
-padding-right = 2
-
-module-margin = 1
-
-; separator = |
-; separator-foreground = ${colors.disabled}
-
-font-0 = Meslo LGM Nerd Font:size=10;2
-font-1 = FiraCode Nerd Font:size=12;2
-
-modules-left = xworkspaces xwindow
-modules-center = previous spotify next
-modules-right = battery pulseaudio bluetooth memory cpu wlan date powermenu
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-; bottom = true
-
-enable-ipc = true
-
-; wm-restack = i3
-
-; override-redirect = true
 
 [module/arch-logo]
 type = custom/text
