--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -5,7 +5,7 @@ background-alt = #00242b
 foreground = #ffffff
 primary = #ffffff
 secondary = #8ABEB7
-alert = #A54242
+alert = #fc8362
 disabled = #707880
 0 = #fbf8cc
 1 = #fde4cf
@@ -46,7 +46,7 @@ font-1 = FiraCode Nerd Font:size=10;1
 
 modules-left = xworkspaces xwindow
 modules-center = previous spotify next
-modules-right = battery backlight pulseaudio bluetooth memory cpu wlan date powermenu
+modules-right = filesystem battery backlight pulseaudio bluetooth memory cpu wlan date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -122,17 +122,17 @@ ramp-capacity-2-font = 2
 ramp-capacity-3-font = 2
 
 format-charging = <label-charging>
-format-charging-foreground = ${colors.1}
+format-charging-foreground = ${colors.2}
 format-charging-prefix = "󰂄 "
-format-charging-prefix-foreground = ${colors.1}
+format-charging-prefix-foreground = ${colors.2}
 
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-foreground = ${colors.1}
+format-discharging-foreground = ${colors.2}
 
 format-full = <label-full>
-format-full-foreground = ${colors.1}
+format-full-foreground = ${colors.2}
 format-full-prefix = "󰁹 "
-format-full-prefix-foreground = ${colors.1}
+format-full-prefix-foreground = ${colors.2}
 
 ramp-capacity-0 = "󰁺"
 ramp-capacity-1 = "󰁼"
@@ -281,6 +281,19 @@ content = ""
 content-foreground = ${colors.0}
 content-padding = 1
 click-left = "~/.config/i3/scripts/power-menu.sh"
+
+[module/filesystem]
+type = internal/fs
+mount-0 = /home
+interval = 10
+warn-percentage = 75
+format-font = 2
+format-mounted = <label-mounted>
+label-mounted-foreground = ${colors.2}
+label-mounted = %mountpoint% %percentage_used%%
+format-warn = <label-warn>
+label-warn-foreground = ${colors.alert}
+label-warn =  %mountpoint% %percentage_used%%
 
 [settings]
 screenchange-reload = true
