--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -46,7 +46,7 @@ font-1 = FiraCode Nerd Font:size=10;1
 
 modules-left = xworkspaces xwindow
 modules-center = previous spotify next
-modules-right = filesystem battery backlight pulseaudio bluetooth memory cpu wlan date powermenu
+modules-right = battery backlight pulseaudio bluetooth filesystem memory cpu wlan date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -270,7 +270,7 @@ format-font = 2
 [module/spotify] 
 type = custom/script 
 exec-if = "pgrep spotify -x > /dev/null" 
-exec  = "spotifyctl -q status --format '%artist%: %title%'" 
+exec  = "spotifyctl -q status --format '%title%'" 
 interval = 1
 click-left = "spotifyctl -q playpause"
 format-foreground = ${colors.0}
@@ -289,8 +289,8 @@ interval = 10
 warn-percentage = 75
 format-font = 2
 format-mounted = <label-mounted>
-label-mounted-foreground = ${colors.2}
-label-mounted = %mountpoint% %percentage_used%%
+label-mounted-foreground = ${colors.5}
+label-mounted = 󰝰 %mountpoint% %percentage_used%%
 format-warn = <label-warn>
 label-warn-foreground = ${colors.alert}
 label-warn =  %mountpoint% %percentage_used%%
