feat/changed spotifyctl to raw playerctl for better performance

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -253,26 +253,26 @@ label = %date% %time%
 
 [module/previous]
 type = custom/script 
-exec-if = "pgrep spotify -x > /dev/null" 
+exec-if = "playerctl status --player spotify 2>/dev/null | grep -Eq "^(Playing|Paused)$"" 
 exec = echo " " 
-click-left = "spotifyctl -q previous"
+click-left = "playerctl previous --player spotify"
 format-foreground = ${colors.0}
 format-font = 2
 
 [module/next] 
 type = custom/script 
-exec-if = "pgrep spotify -x > /dev/null" 
+exec-if = "playerctl status --player spotify 2>/dev/null | grep -Eq "^(Playing|Paused)$""
 exec = echo " " 
-click-left = "spotifyctl -q next"
+click-left = "playerctl next --player spotify"
 format-foreground = ${colors.0}
 format-font = 2
 
 [module/spotify] 
 type = custom/script 
-exec-if = "pgrep spotify -x > /dev/null" 
-exec  = "spotifyctl -q status --format '%title%'" 
+exec-if = "playerctl status --player spotify 2>/dev/null | grep -Eq "^(Playing|Paused)$""
+exec  = "playerctl metadata --player spotify --format "{{ title }}"" 
 interval = 1
-click-left = "spotifyctl -q playpause"
+click-left = "playerctl play-pause --player spotify"
 format-foreground = ${colors.0}
 
 [module/powermenu]
