feat/polybar: checkupdates service and timer in systemctl and polybar module to show with conditional colors available updates

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -46,7 +46,7 @@ font-1 = FiraCode Nerd Font:size=10;1
 
 modules-left = xworkspaces xwindow
 modules-center = previous spotify next
-modules-right = battery backlight pulseaudio bluetooth filesystem memory cpu wlan date powermenu
+modules-right = updates battery backlight pulseaudio bluetooth filesystem memory cpu wlan date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -294,6 +294,16 @@ label-mounted = 󰝰 %mountpoint% %percentage_used%%
 format-warn = <label-warn>
 label-warn-foreground = ${colors.alert}
 label-warn =  %mountpoint% %percentage_used%%
+
+[module/updates]
+type = custom/script
+exec = ~/.config/polybar/scripts/polybar-updates-reader.sh
+interval = 600
+format = <label>
+label = %output%
+label-foreground = ${colors.2}
+click-left = alacritty -e 'yay -Syu'
+click-right = ~/.config/polybar/scripts/polybar-updates-reader.sh refresh
 
 [settings]
 screenchange-reload = true
