fix/polybar: refresh right click in checkupdates module

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -303,7 +303,7 @@ format = <label>
 label = %output%
 label-foreground = ${colors.2}
 click-left = alacritty -e 'yay -Syu'
-click-right = ~/.config/polybar/scripts/polybar-updates-reader.sh refresh
+click-right = ~/.config/polybar/scripts/check-updates-service.sh && ~/.config/polybar/scripts/polybar-updates-reader.sh refresh
 
 [settings]
 screenchange-reload = true
